fixing partner logo height on mobile

--- a/web/content/themes/tedxbern/sass/style.scss
+++ b/web/content/themes/tedxbern/sass/style.scss
@@ -663,7 +663,7 @@ $img-brand-float: left;
 
 
         img {
-            max-height: none;
+            max-height: 46px;
             width: 100%;
             height: auto;
         }
